# case-search-backend-beta

./: .gitignore  LICENSE  README.md
.github/workflows/: terraform-apply.yml  terraform-plan.yml
app/: pyproject.toml
app/api/: main.py
terraform/aws/infra/: main.tf  network.tf  outputs.tf  security_groups.tf  terraform.tf  variables.tf
terraform/aws/trust/: main.tf  terraform.tfvars.example  variables.tf
